# jni

./: .gitmodules  1_android-jni-wrappers.txt  3_jnipp_2.txt
1_android-jni-wrappers/: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  makeAndFormat.sh  makeMonado.ps1  makeWrapper.py  monado.json  tox.ini  wrapped.json  wrapped.schema.json
1_android-jni-wrappers/jniwrap/: __init__.py  android.py  class_data.py  members.py  processor.py  types.py  writer.py
1_android-jni-wrappers/wrap/: ObjectWrapperBase.h  android.app.h  android.app.impl.h  android.content.h  android.content.impl.h  android.content.pm.cpp  android.content.pm.h  android.content.pm.impl.h  android.database.h  android.database.impl.h  android.graphics.cpp  android.graphics.h  android.graphics.impl.h  android.net.cpp  android.net.h  android.net.impl.h  android.os.h  android.os.impl.h  android.provider.h  android.provider.impl.h  android.service.vr.h  android.service.vr.impl.h  android.text.cpp  android.text.h  android.text.impl.h  android.util.h  android.util.impl.h  android.view.h  android.view.impl.h  android.widget.h  android.widget.impl.h  dalvik.system.h  dalvik.system.impl.h  java.io.cpp  java.io.h  java.io.impl.h  java.lang.cpp  java.lang.h  java.lang.impl.h  java.util.h  (+1 more)
1_android-jni-wrappers/wrap/xrt/auxiliary/android/: org.freedesktop.monado.auxiliary.cpp  org.freedesktop.monado.auxiliary.hpp  org.freedesktop.monado.auxiliary.impl.hpp
1_android-jni-wrappers/wrap/xrt/ipc/android/: org.freedesktop.monado.ipc.impl.hpp
3_jnipp_2/: .gitignore  CMakeLists.txt  jnipp.cpp  jnipp.h  makefile
3_jnipp_2/tests/: CMakeLists.txt
